--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                         </p>
                         <!-- 3. Call-to-Action Copy: Benefit-Oriented CTA -->
                         <a href="https://calendly.com/ahmad-katkhuda" target="_blank" class="cta-button inline-flex items-center mt-10 px-8 py-3 text-lg font-semibold text-white rounded-full shadow-xl hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]">
-                            Schedule a Free 30-Minute Consultation
+                            Schedule a Free Consultation
                         </a>
                         <p class="text-sm mt-3 text-gray-500">Get a technical roadmap tailored to your D365 environment.</p>
                     </section>
@@ -573,7 +573,7 @@
                         </p>
                         <!-- 3. Call-to-Action Copy: Benefit-Oriented CTA -->
                         <a href="https://calendly.com/ahmad-katkhuda" target="_blank" class="cta-button inline-flex items-center mt-10 px-8 py-3 text-lg font-semibold text-white rounded-full shadow-xl hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]">
-                            Kostenloses 30-Minuten Beratungsgespräch Buchen
+                            Kostenloses Beratungsgespräch Buchen
                         </a>
                         <p class="text-sm mt-3 text-gray-500">Erhalten Sie einen technischen Fahrplan, der auf Ihre D365-Umgebung zugeschnitten ist.</p>
                     </section>
@@ -739,7 +739,7 @@
                         </p>
                         <!-- 3. Call-to-Action Copy: Benefit-Oriented CTA -->
                         <a href="https://calendly.com/ahmad-katkhuda" target="_blank" class="cta-button inline-flex items-center mt-10 px-8 py-3 text-lg font-semibold text-white rounded-full shadow-xl hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]">
-                            احجز استشارة مجانية مدتها 30 دقيقة
+                            احجز استشارة مجانية
                         </a>
                         <p class="text-sm mt-3 text-gray-500">احصل على خريطة طريق فنية مصممة خصيصًا لبيئة D365 لديك.</p>
                     </section>
