--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                 <a href="https://www.linkedin.com/in/ahmadkatkhuda" target="_blank" class="text-gray-400 hover:dynamic-accent transition duration-150" aria-label="LinkedIn Profile">
                     <i data-lucide="linkedin" class="w-6 h-6"></i>
                 </a>
-                <a href="https://github.com/ahmadkatkhuda" target="_blank" class="text-gray-400 hover:dynamic-accent transition duration-150" aria-label="GitHub Profile">
+                <a href="https://github.com/ahmad-katkhuda" target="_blank" class="text-gray-400 hover:dynamic-accent transition duration-150" aria-label="GitHub Profile">
                     <i data-lucide="github" class="w-6 h-6"></i>
                 </a>
             </div>
