--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                             Helping manufacturing and distribution enterprises streamline their operations with tailored, high-performance Dynamics 365 SCM solutions.
                         </p>
                         <!-- Benefit-Oriented CTA -->
-                        <a href="https://calendly.com/ahmad-katkhuda" target="_blank" class="cta-button inline-flex items-center mt-10 px-8 py-3 text-lg font-semibold text-white rounded-full shadow-xl hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]">
+                        <a href="https://zcal.co/ahmadkatkhuda" target="_blank" class="cta-button inline-flex items-center mt-10 px-8 py-3 text-lg font-semibold text-white rounded-full shadow-xl hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]">
                             Schedule a Free Consultation
                         </a>
                         <p class="text-sm mt-3 text-gray-500">Get a technical roadmap tailored to your D365 environment.</p>
@@ -572,7 +572,7 @@
                         <p class="text-xl text-gray-600 mb-10 max-w-3xl mx-auto">
                             Let's discuss your current D365 pain points, performance bottlenecks, or upcoming project requirements. Your first technical review is free.
                         </p>
-                        <a href="https://calendly.com/ahmad-katkhuda" target="_blank" class="cta-button inline-flex items-center px-10 py-4 text-xl font-bold text-white rounded-full shadow-2xl transition duration-300 transform hover:scale-[1.05]">
+                        <a href="https://zcal.co/ahmadkatkhuda" target="_blank" class="cta-button inline-flex items-center px-10 py-4 text-xl font-bold text-white rounded-full shadow-2xl transition duration-300 transform hover:scale-[1.05]">
                             Schedule Your Free Consultation
                         </a>
                     </section>
