--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                             Helping manufacturing and distribution enterprises streamline their operations with tailored, high-performance Dynamics 365 SCM solutions.
                         </p>
                         <!-- 3. Call-to-Action Copy: Benefit-Oriented CTA -->
-                        <a href="https://calendly.com/ahmad-katkhuda" target="_blank" class="cta-button inline-flex items-center mt-10 px-8 py-3 text-lg font-semibold text-white rounded-full shadow-xl hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]">
+                        <a href="https://zcal.co/ahmadkatkhuda" target="_blank" class="cta-button inline-flex items-center mt-10 px-8 py-3 text-lg font-semibold text-white rounded-full shadow-xl hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]">
                             Schedule a Free Consultation
                         </a>
                         <p class="text-sm mt-3 text-gray-500">Get a technical roadmap tailored to your D365 environment.</p>
@@ -551,7 +551,7 @@
                         <p class="text-xl text-gray-600 mb-10 max-w-3xl mx-auto">
                             Let’s discuss your current D365 pain points, performance bottlenecks, or upcoming project requirements. Your first technical review is free.
                         </p>
-                        <a href="https://calendly.com/ahmad-katkhuda" target="_blank" class="cta-button inline-flex items-center px-10 py-4 text-xl font-bold text-white rounded-full shadow-2xl transition duration-300 transform hover:scale-[1.05]">
+                        <a href="https://zcal.co/ahmadkatkhuda" target="_blank" class="cta-button inline-flex items-center px-10 py-4 text-xl font-bold text-white rounded-full shadow-2xl transition duration-300 transform hover:scale-[1.05]">
                             Schedule Your Free Consultation
                         </a>
                     </section>
@@ -572,7 +572,7 @@
                             Ich unterstütze Fertigungs- und Handelsunternehmen dabei, ihre Betriebsabläufe mit maßgeschneiderten, hoch performanten Dynamics 365 SCM Lösungen zu optimieren.
                         </p>
                         <!-- 3. Call-to-Action Copy: Benefit-Oriented CTA -->
-                        <a href="https://calendly.com/ahmad-katkhuda" target="_blank" class="cta-button inline-flex items-center mt-10 px-8 py-3 text-lg font-semibold text-white rounded-full shadow-xl hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]">
+                        <a href="https://zcal.co/ahmadkatkhuda" target="_blank" class="cta-button inline-flex items-center mt-10 px-8 py-3 text-lg font-semibold text-white rounded-full shadow-xl hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]">
                             Kostenloses Beratungsgespräch Buchen
                         </a>
                         <p class="text-sm mt-3 text-gray-500">Erhalten Sie einen technischen Fahrplan, der auf Ihre D365-Umgebung zugeschnitten ist.</p>
@@ -717,7 +717,7 @@
                         <p class="text-xl text-gray-600 mb-10 max-w-3xl mx-auto">
                             Lassen Sie uns Ihre aktuellen D365-Schwachstellen, Performance-Engpässe oder anstehenden Projektanforderungen besprechen. Ihre erste technische Überprüfung ist kostenlos.
                         </p>
-                        <a href="https://calendly.com/ahmad-katkhuda" target="_blank" class="cta-button inline-flex items-center px-10 py-4 text-xl font-bold text-white rounded-full shadow-2xl transition duration-300 transform hover:scale-[1.05]">
+                        <a href="https://zcal.co/ahmadkatkhuda" target="_blank" class="cta-button inline-flex items-center px-10 py-4 text-xl font-bold text-white rounded-full shadow-2xl transition duration-300 transform hover:scale-[1.05]">
                             Kostenloses Gespräch Buchen
                         </a>
                     </section>
@@ -738,7 +738,7 @@
                             أساعد شركات التصنيع والتوزيع على تبسيط عملياتها من خلال حلول Dynamics 365 SCM مخصصة وذات أداء عالٍ.
                         </p>
                         <!-- 3. Call-to-Action Copy: Benefit-Oriented CTA -->
-                        <a href="https://calendly.com/ahmad-katkhuda" target="_blank" class="cta-button inline-flex items-center mt-10 px-8 py-3 text-lg font-semibold text-white rounded-full shadow-xl hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]">
+                        <a href="https://zcal.co/ahmadkatkhuda" target="_blank" class="cta-button inline-flex items-center mt-10 px-8 py-3 text-lg font-semibold text-white rounded-full shadow-xl hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]">
                             احجز استشارة مجانية
                         </a>
                         <p class="text-sm mt-3 text-gray-500">احصل على خريطة طريق فنية مصممة خصيصًا لبيئة D365 لديك.</p>
@@ -884,7 +884,7 @@
                         <p class="text-xl text-gray-600 mb-10 max-w-3xl mx-auto">
                             دعنا نناقش نقاط الضعف الحالية في D365، أو عنق الزجاجة في الأداء، أو متطلبات مشروعك القادمة. مراجعتك الفنية الأولى مجانية.
                         </p>
-                        <a href="https://calendly.com/ahmad-katkhuda" target="_blank" class="cta-button inline-flex items-center px-10 py-4 text-xl font-bold text-white rounded-full shadow-2xl transition duration-300 transform hover:scale-[1.05]">
+                        <a href="https://zcal.co/ahmadkatkhuda" target="_blank" class="cta-button inline-flex items-center px-10 py-4 text-xl font-bold text-white rounded-full shadow-2xl transition duration-300 transform hover:scale-[1.05]">
                             احجز استشارتك المجانية
                         </a>
                     </section>
