--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
                     <section class="py-20 bg-gray-50 rounded-2xl shadow-inner px-8">
                         <div class="grid lg:grid-cols-3 gap-12 items-center">
                             <div class="lg:col-span-1 flex justify-center">
-                                <img src="https://placehold.co/250x300/F5F5F7/999?text=Ahmad+Katkhuda" alt="Portrait of Ahmad Katkhuda, Dynamics 365 Technical Consultant." class="w-64 h-80 object-cover rounded-xl shadow-2xl transition duration-300 transform hover:scale-[1.03]">
+                                <img src="IMG_2853.jpg" alt="Portrait of Ahmad Katkhuda, Dynamics 365 Technical Consultant." class="w-64 h-80 object-cover rounded-xl shadow-2xl transition duration-300 transform hover:scale-[1.03]">
                             </div>
 
                             <div class="lg:col-span-2">
@@ -1011,7 +1011,7 @@
                     <section class="py-20 bg-gray-50 rounded-2xl shadow-inner px-8">
                         <div class="grid lg:grid-cols-3 gap-12 items-center">
                             <div class="lg:col-span-1 flex justify-center">
-                                <img src="https://placehold.co/250x300/F5F5F7/999?text=Ahmad+Katkhuda" alt="Porträt von Ahmad Katkhuda, Dynamics 365 Technical Consultant." class="w-64 h-80 object-cover rounded-xl shadow-2xl transition duration-300 transform hover:scale-[1.03]">
+                                <img src="IMG_2853.jpg" alt="Porträt von Ahmad Katkhuda, Dynamics 365 Technical Consultant." class="w-64 h-80 object-cover rounded-xl shadow-2xl transition duration-300 transform hover:scale-[1.03]">
                             </div>
                             <div class="lg:col-span-2">
                                 <h2 class="text-4xl font-semibold mb-6">
@@ -1169,7 +1169,7 @@
                     <section class="py-20 bg-gray-50 rounded-2xl shadow-inner px-8">
                         <div class="grid lg:grid-cols-3 gap-12 items-center">
                             <div class="lg:col-span-1 lg:order-last flex justify-center">
-                                <img src="https://placehold.co/250x300/F5F5F7/999?text=Ahmad+Katkhuda" alt="صورة لأحمد كتخدا، مستشار فني Dynamics 365." class="w-64 h-80 object-cover rounded-xl shadow-2xl transition duration-300 transform hover:scale-[1.03]">
+                                <img src="IMG_2853.jpg" alt="صورة لأحمد كتخدا، مستشار فني Dynamics 365." class="w-64 h-80 object-cover rounded-xl shadow-2xl transition duration-300 transform hover:scale-[1.03]">
                             </div>
 
                             <div class="lg:col-span-2 lg:order-first">
