replace place holders impressum.html

--- a/impressum.html
+++ b/impressum.html
@@ -62,14 +62,13 @@
                 <h3 class="text-xl font-semibold mt-6">Dienstanbieter</h3>
                 <p>
                     Ahmad Katkhuda<br>
-                    [Vollständige Adresse des Unternehmens/Freiberuflers einfügen]<br>
+                    Freiberuflers<br>
                     Hamburg, Deutschland
                 </p>
 
                 <h3 class="text-xl font-semibold mt-6">Kontakt</h3>
                 <p>
-                    Telefon: [Ihre Telefonnummer]<br>
-                    E-Mail: [Ihre E-Mail-Adresse]<br>
+                    E-Mail: ahmad.katkhuda@outloo.de<br>
                     Web: <a href="index.html" class="underline hover:text-gray-600">www.ahmadkatkhuda.com</a>
                 </p>
 
@@ -82,7 +81,6 @@
                 <h3 class="text-xl font-semibold mt-6">Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h3>
                 <p>
                     Ahmad Katkhuda<br>
-                    [Vollständige Adresse]
                 </p>
             </div>
             <p class="mt-8 text-sm text-gray-500 border-t pt-4">
