label corrections impressum.html

--- a/impressum.html
+++ b/impressum.html
@@ -68,14 +68,13 @@
 
                 <h3 class="text-xl font-semibold mt-6">Kontakt</h3>
                 <p>
-                    E-Mail: ahmad.katkhuda@outloo.de<br>
+                    E-Mail: ahmad.katkhuda@outlook.de<br>
                     Web: <a href="index.html" class="underline hover:text-gray-600">www.ahmadkatkhuda.com</a>
                 </p>
 
                 <h3 class="text-xl font-semibold mt-6">Berufsbezeichnung</h3>
                 <p>
                     Freiberuflicher Technischer Berater (Dynamics 365 SCM)<br>
-                    Umsatzsteuer-Identifikationsnummer (optional, falls vorhanden): [Ihre USt-ID oder Hinweis zur Kleinunternehmerregelung]
                 </p>
                 
                 <h3 class="text-xl font-semibold mt-6">Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h3>
