Bug Fix Language drop Down index.html

--- a/index.html
+++ b/index.html
@@ -755,9 +755,9 @@
                         <span class="ml-1 text-sm font-medium uppercase" id="current-lang-display">EN</span>
                     </button>
                     <div class="absolute right-0 top-full mt-0 w-32 bg-white rounded-lg shadow-xl dropdown-content origin-top" role="menu">
-                        <a href="#en" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition duration-150" role="menuitem" onclick="closeLanguageDropdown()">English</a>
-                        <a href="#de" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition duration-150" role="menuitem" onclick="closeLanguageDropdown()">Deutsch</a>
-                        <a href="#ar" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition duration-150" role="menuitem" onclick="closeLanguageDropdown()">العربية</a>
+                        <a href="#en" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition duration-150" role="menuitem">English</a>
+                        <a href="#de" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition duration-150" role="menuitem">Deutsch</a>
+                        <a href="#ar" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition duration-150" role="menuitem">العربية</a>
                     </div>
                 </div>
 
@@ -1280,9 +1280,9 @@
                     <span class="ml-2 text-sm font-medium">Language</span>
                 </button>
                 <div class="absolute bottom-full right-0 mb-0 w-32 bg-white rounded-lg shadow-xl footer-dropdown-content origin-bottom" role="menu">
-                    <a href="#en" onclick="switchLanguage('en'); closeFooterLanguageDropdown(); return false;" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition duration-150" role="menuitem">English</a>
-                    <a href="#de" onclick="switchLanguage('de'); closeFooterLanguageDropdown(); return false;" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition duration-150" role="menuitem">Deutsch</a>
-                    <a href="#ar" onclick="switchLanguage('ar'); closeFooterLanguageDropdown(); return false;" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition duration-150" role="menuitem">العربية</a>
+                    <a href="#en" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition duration-150" role="menuitem">English</a>
+                    <a href="#de" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition duration-150" role="menuitem">Deutsch</a>
+                    <a href="#ar" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition duration-150" role="menuitem">العربية</a>
                 </div>
             </div>
         </div>
